Fixed whitespace in quick note

--- a/src/components/Notes/css/QuickNote.scss
+++ b/src/components/Notes/css/QuickNote.scss
@@ -24,4 +24,7 @@
 
         background-color: var(--clr-gray);
     }
+    .note-content{
+        white-space: pre-wrap;
+    }
 }
